   7. Prop_OpenPassword can now have a language qualifier
   8. LIST AREA SHOPS will now show local shop inventories with prices
   9. Archon QUESTS [QUEST NAME] and LIST QUESTWINNERS can now show all winners of quests.
  10. New CHANNEL flag: NOLANGUAGE, to turn off foreign languages when using the channel.
  11. LIST QUESTNAMES can show a map between quest names (ids) and display names.

# Build 5.9.2 Released 02/09/2016
   1. Apprentice now gets bonus common skill.
   2. Prop_ItemBinder can now bind to a group.
   3. POSSESS can now target a room or area
   4. Can now edit recipes of Construction, Masonry, Excavation, Landscaping, etc from CL or MG
   5. Save command will now prompt for confirmation with delta message.  
   6. New channel flag: ACCOUNTOOCNOADMIN - for a more nuanced Account Name-based channel
   7. Metacraft can now craft everything from specific skills.  See help.
   8. New Chants: Bloody Water, Find Driftwood, Filter Water, Aquatic Pass, Sense Water, Summon Coral, Flood
   9. New Chants: Underwater Action, Water Hammer, Drown, Call Mate, Summon School, High Tide, Land Lungs
  10. New Chants: Reef Walking, Capsize, Feeding Frenzy, Calm Seas, Summon Jellyfish, Flippers, Waterguard
  11. New Chants: Sift Wrecks, Favorable Winds, Tide Moon, Tidal Wave, Predict Tides, Tsunami, Whirlpool
  12. New races: SmallFish, Angelfish, Merfolk, Selkie, Swordfish, Dolphin, Seal, Walrus, Whale
  13. New language: Aquan
  14. New Druid Shapeshift forms: Fish and Sea Mammal (I bet you saw this coming)
  15. Archon AutoInvoke now saves settings.  Default no-invoke list now in lists.ini
  16. CoffeeTable statistics will now track activity by Area also.
  17. Ship Title copies can now be purchased and traded, just like land titles.
  18. CATALOG command can now be used to list categories.
  19. Anchors Down on sailing ships now prevents WaterCurrent effects (duh!)
  20. Sailing Ships now get area weather messages and affects