@@ -2257,7 +2257,15 @@ public class CMProps extends Properties
 		setUpLowVar(Str.FORMULA_MANARECOVER, getStr("FORMULA_MANARECOVER","25+(((@x1 - (@xx*@x3/2.0) - (@xx*@x4/2.0) - (@xx*@x5/2.0))*@x2/50.0) + (@xx*@x6*.5) + (@xx/4.0*@x7) - (@xx/2.0*@x9))"));
 		setUpLowVar(Str.FORMULA_MOVESRECOVER, getStr("FORMULA_MOVESRECOVER","25+(((@x1 - (@xx*@x3/2.0) - (@xx*@x4/2.0) - (@xx*@x5/2.0))*@x2/10.0) + (@xx*@x6*.5) + (@xx/4.0*@x7) + (@xx/4.0*@x8) - (@xx/2.0*@x9))"));
 
-		Directions.instance().reInitialize(getInt("DIRECTIONS"));
+		final LanguageLibrary lang = CMLib.lang();
+		Directions.instance().reInitialize(getInt("DIRECTIONS"), new Directions.DirectionWordTranslator()
+		{
+			@Override
+			public String translate(String string)
+			{
+				return lang.L(string);
+			}
+		});
 
 		resetSecurityVars();
 		statCodeExtensions = getStrsStarting("EXTVAR_");
