@@ -10,6 +10,8 @@
    9. Archon QUESTS [QUEST NAME] and LIST QUESTWINNERS can now show all winners of quests.
   10. New CHANNEL flag: NOLANGUAGE, to turn off foreign languages when using the channel.
   11. LIST QUESTNAMES can show a map between quest names (ids) and display names.
+  12. LIST ABILITYDOMAINS will show a list of, well, ability domains
+  13. ID on private property will now show size and features, as will VIEW of titles on shopkeepers.
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
